--- a/src/styling/app.css
+++ b/src/styling/app.css
@@ -4,7 +4,8 @@
 }
 
 .app_base {
-    height: 100vh;
+    min-height: 100vh;
+    height: min-content;
     width: 100%;
     /* background-color: red; */
 
@@ -76,5 +77,5 @@
         background-color: black;
     }
 
-    
+
 }
