--- a/src/styling/mainScreen.css
+++ b/src/styling/mainScreen.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,600;1,600&display=swap');
+
+
 .app_main_screen {
     width: 80%;
     height: 100%;
@@ -10,15 +13,16 @@
     gap: 2rem;
 
 
+
 }
 
 
 
 .main_screen_top_bar {
-    height: 15%;
+    height: 10%;
     width: 80%;
-    background-color: rgb(103, 67, 0);
-    margin-top: 2rem;
+    /* background-color: rgb(103, 67, 0); */
+    margin-top: 3rem;
 
     display: flex;
     align-items: center;
@@ -49,7 +53,7 @@
 .main_screen_top_heading {
     height: 10%;
     width: 80%;
-    background-color: rgb(177, 255, 69);
+    /* background-color: rgb(177, 255, 69); */
 
     display: flex;
     align-items: center;
@@ -63,10 +67,10 @@
 
 
 .main_screen_grid_div {
-    height: 75%;
+    height: 80%;
     width: 60%;
     /* background-color: pink; */
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -85,19 +89,22 @@
     width: 100%;
     height: 100%;
 
-    border-radius: 1rem;
+    border-radius: 0.8rem;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.4) 50%, rgba(255, 255, 255, 0.1));
 
 
-    /* background-color: yellow; */
+    box-shadow: inset 0 0 5px #ffffff;
 
-    border: 2px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(2px);
+
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 
@@ -105,6 +112,8 @@
 .grid_item_label,
 .grid_item_price {
     color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+
 
 }
 
@@ -113,7 +122,6 @@
     font-size: 1rem;
     font-weight: 400;
 }
-
 
 
 
@@ -187,7 +195,7 @@
     }
 
     .app_main_screen {
-        gap: 1rem;
+        gap: 2rem;
     }
 
 }
@@ -203,9 +211,12 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(8, 1fr);
 
-        height: 100%;
+        height: 100vh;
         width: 90%;
+
+        gap: 1rem;
     }
+
 
 
 
@@ -226,11 +237,6 @@
 
 
 
-    .app_main_screen {
-        gap: 0.5rem;
-    }
-
-
 
 
     .main_screen_top_bar {
@@ -244,6 +250,7 @@
         width: 8rem;
         height: 2.2rem;
 
+        font-size: small;
     }
 
     .main_screen_top_heading {
