--- a/src/styling/sidebar.css
+++ b/src/styling/sidebar.css
@@ -11,7 +11,7 @@
 .app_left_sidebar {
 
     width: 20%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(22, 22, 35, 0.6);
 
 
@@ -46,7 +46,7 @@
     /* background-color: orange; */
 
     margin-bottom: 2rem;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -75,7 +75,7 @@
 
 
 .logo2 {
-    height: 0.9rem;
+    height:1.1rem;
 }
 
 
@@ -84,7 +84,7 @@
 
 .sidebar_menu_item {
     width: 90%;
-    height: 7%;
+    height: 8%;
     border-radius: 1rem;
     /* background-color: red;    */
 
@@ -256,13 +256,19 @@
 
     .sidebar_width {
         background-color: rgba(22, 22, 35, 0.99);
+        z-index: 1;
+        height: 100vh;
 
     }
 
     .app_left_sidebar {
         width: 20rem;
-        position: absolute;
+        /* position: absolute; */
         left: 0%;
+        position: fixed;
+        top: 0%;
+        
+    
 
     }
 
